test/error/E6.1.chigfn
{
	"type": "function",
	"name": "helloworld",
	"nodes": [
		{
			"type": []
		}
	]
}
